--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,18 +1,20 @@
 branch-defaults:
   master:
     environment: pv-lighshow-server-dev
-    group_suffix: null
+environment-defaults:
+  pv-lighshow-server-dev:
+    branch: null
+    repository: null
 global:
   application_name: pv-lighshow-server
-  branch: null
   default_ec2_keyname: null
-  default_platform: Node.js
+  default_platform: arn:aws:elasticbeanstalk:us-west-2::platform/Node.js running on
+    64bit Amazon Linux/4.2.2
   default_region: us-west-2
   include_git_submodules: true
   instance_profile: null
   platform_name: null
   platform_version: null
   profile: null
-  repository: null
   sc: git
   workspace_type: Application
