--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"no tests yet\"",
-    "start": "npm install && node app.js"
+    "start": "npm install && node index.js",
+    "dev": "npm install && nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "express-socket.io": "^1.0.3",
     "http": "0.0.0",
+    "mongodb": "^2.2.31",
     "socket.io": "^2.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
