--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-socket.io": "^1.0.3",
     "http": "0.0.0",
     "mongodb": "^2.2.31",
+    "password-hash-and-salt": "^0.1.4",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
