--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,7 +14,8 @@ pipelines:
           - npm install
           - npm test
           - docker login --username=_ --password=$HEROKU_TOKEN registry.heroku.com
-          - docker build registry.heroku.com/$HEROKU_APP_NAME/web .
+          - docker build -t registry.heroku.com/$HEROKU_APP_NAME/web .
+          - docker tag web registry.heroku.com/$HEROKU_APP_NAME/web
           - docker push registry.heroku.com/$HEROKU_APP_NAME/web
 options:
   docker: true
